apiにバージョン追加
